--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
     "db:migrate": "npx prisma migrate dev --config-dir ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.561.0",
     "next": "16.0.8",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "react-hook-form": "^7.68.0",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@prisma/internals": "^7.1.0",
@@ -31,6 +38,7 @@
     "prisma": "^7.1.0",
     "tailwindcss": "^4.1.17",
     "tsx": "^4.21.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
