--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
@@ -22,6 +25,7 @@
     "postcss": "^8.5.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.68.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
