--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
     "db:migrate": "npx prisma migrate dev --config-dir ."
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-pg": "^7.1.0",
-    "@prisma/client": "^7.1.0",
+    "@prisma/client": "^6.19.1",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.561.0",
     "next": "16.0.8",
+    "next-auth": "^5.0.0-beta.30",
+    "next-cloudinary": "^6.17.5",
+    "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "react": "19.2.1",
@@ -28,18 +34,21 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.68.0",
     "tailwind-merge": "^3.4.0",
+    "uuid": "^13.0.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
     "@prisma/internals": "^7.1.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
-    "prisma": "^7.1.0",
+    "prisma": "^6.19.1",
     "tailwindcss": "^4.1.17",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
