--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "19.2.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.68.0",
+    "react-spinners": "^0.17.0",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.13"
