feat: implement new verification page with loading skeleton and content components feat: enhance pagination component with custom hooks and improved button handling refactor: streamline search bar functionality with custom hooks and improved UI elements build: add prebuild checks for types, linting, and Prisma validation in package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "prebuild": "npm run check",
+    "check": "npm run check:types && npm run check:lint && npm run check:prisma",
+    "check:types": "tsc --noEmit",
+    "check:lint": "next lint",
+    "check:prisma": "prisma generate && prisma validate",
+    "build:prod": "npm run check && next build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
