--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
+    "puppeteer": "^24.36.1",
+    "qrcode": "^1.5.4",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-dropzone": "^14.3.8",
@@ -57,9 +59,10 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20",
+    "@types/node": "^20.19.31",
     "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.16.0",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
