--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.561.0",
     "next": "16.0.8",
     "next-auth": "^5.0.0-beta.30",
